k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ok-api-service
  labels:
    app: ok-api
spec:
  selector:
    app: ok-api
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
