k8s/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ok-api-virtualservice
spec:
  hosts:
  - "tu-dominio.com"
  gateways:
  - ok-api-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: ok-api-service
        port:
          number: 80
